--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -28,10 +28,12 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'blog_list' %}">Home</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+            <form method="GET" action="{% url 'search' %}" class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+
             {% if user.is_authenticated %}
             <form action="{% url 'logout' %}" method="post">
               {% csrf_token %}
