--- a/blog/blogapp/templates/blog_confirm_delete.html
+++ b/blog/blogapp/templates/blog_confirm_delete.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block title %}
-  Blog | Delete
+  Tweet | Delete
 {% endblock %}
 
 {% block content %}
 
-<h1 class="mt-4" > Are you sure that you want to delete the Blog ?  </h1>
+<h1 class="mt-4" > Are you sure that you want to delete this Tweet ?  </h1>
   
   <form method="post">
     {% csrf_token %}
