--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -9,7 +9,7 @@
 
     <title>
         {% block title %}
-          Blog
+          Tweet
         {% endblock title %}
     </title>
 
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Blogger</a>
+          <a class="navbar-brand" href="#">TweetApp</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
