--- a/blog/templates/registration/register.html
+++ b/blog/templates/registration/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Registraion form</h2>
+  <h2>Registration form</h2>
   <form method="post">
     {% csrf_token %}
     {{form.as_p}}
